--- a/web/src/pages/login/index.less
+++ b/web/src/pages/login/index.less
@@ -32,11 +32,11 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: rgba(24, 73, 169, 0.6);
-      background-image: url('@/assets/svg/login-background.svg');
-      background-size: cover;
+      // background-color: rgba(24, 73, 169, 0.6);
+      background-image: url('@/assets/jpg/login_bg.png');
+      background-size: 120% 95%;
       background-blend-mode: multiply;
-      filter: blur(3px);
+      filter: blur(0px);
       background-position: center;
       z-index: -1;
     }
