--- a/web/src/pages/chat/chat-configuration-modal/index.less
+++ b/web/src/pages/chat/chat-configuration-modal/index.less
@@ -55,3 +55,36 @@
 .variableSlider {
   width: 100%;
 }
+
+.resizeHandle {
+  position: absolute;
+  right: -5px;
+  top: 0;
+  bottom: 0;
+  width: 10px;
+  cursor: col-resize;
+  z-index: 1;
+}
+
+.variableTable {
+  .ant-table-cell {
+    position: relative;
+    text-align: left !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+
+  .editable-cell-value-wrap {
+    text-align: left;
+    padding-left: 0 !important;
+  }
+
+  input {
+    text-align: left;
+    padding-left: 0 !important;
+  }
+
+  .ant-table-thead > tr > th {
+    padding-left: 8px !important;
+  }
+}
