--- a/web/src/pages/flow/canvas/index.less
+++ b/web/src/pages/flow/canvas/index.less
@@ -12,6 +12,7 @@
 .canvasWrapper {
   position: relative;
   height: 100%;
+  background-color: #f0f2f6;
   :global(.react-flow__node-group) {
     .commonNode();
     padding: 0;
