--- a/web/src/pages/flow/flow-drawer/index.less
+++ b/web/src/pages/flow/flow-drawer/index.less
@@ -1,21 +1,56 @@
 .title {
   flex-basis: 60px;
+  margin-right: 12px;
 }
 
 .formWrapper {
   :global(.ant-form-item-label) {
     font-weight: 600;
   }
+  height: 100%;
+  overflow-y: auto;
+  padding: 16px;
 }
 
 .operatorDescription {
-  font-size: 14px;
-  padding-top: 16px;
-  font-weight: normal;
+  font-size: 12px;
+  color: #8c8c8c;
+  display: flex;
+  padding-top: 8px;
 }
 
 .formDrawer {
-  :global(.ant-drawer-content-wrapper) {
-    transform: translateX(0) !important;
+  :global {
+    .ant-drawer-content-wrapper {
+      transform: translateX(0) !important;
+      box-shadow: none;
+      border-radius: 16px;
+      overflow: hidden;
+      margin-right: 16px;
+    }
+    .ant-drawer-header {
+      border-bottom: 1px solid rgb(229, 230, 235);
+      padding: 16px 16px;
+      border-radius: 16px 16px 0 0;
+    }
+    .ant-drawer-body {
+      padding: 0;
+      border-radius: 0 0 16px 16px;
+    }
   }
+}
+
+// 抽屉拖拽把手样式
+.drawerResizeHandle {
+  position: absolute;
+  top: 50%;
+  left: -12px;
+  width: 6px;
+  height: 50px;
+  margin-top: -25px; // 垂直居中偏移
+  cursor: col-resize;
+  z-index: 1001;
+  background-color: rgba(240, 242, 245, 0.9);
+  border-radius: 3px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
 }
