--- a/web/src/pages/flow/flow-sider/index.less
+++ b/web/src/pages/flow/flow-sider/index.less
@@ -21,13 +21,13 @@
   background: transparent !important;
 }
 
-:global(.ant-layout-sider) {
-  margin-left: 16px;
-  background: transparent !important;
-  z-index: 10;
-  position: relative;
-}
+// :global(.ant-layout-sider) {
+//   margin-left: 8px;
+//   background: transparent !important;
+//   z-index: 10;
+//   position: relative;
+// }
 
-:global(.ant-layout-sider-children) {
-  background: transparent !important;
-}
+// :global(.ant-layout-sider-children) {
+//   background: transparent !important;
+// }
