--- a/web/src/pages/flow/header/index.less
+++ b/web/src/pages/flow/header/index.less
@@ -1,3 +1,9 @@
 .flowHeader {
   padding: 10px 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background: transparent;
 }
